--- a/style.css
+++ b/style.css
@@ -1,1 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+body{
+    font-family: source sans pro;
+    background-color: #eee;
+    padding: 1em 5em 1em 5em;
+}
+header{
+    font-family: abril fatface;
+    text-align: center;
+}
+.date{
+    text-align: left;
+    font-family: roboto slab;
+    color: #777;
+    font-weight: 100
+}
+h2, h4{
+    font-family: roboto slab;
+}
+.newspaper-container{
+    background-color: white;
+    box-shadow: #ddd;
+    width: 700px;
+    border-radius: 1%;
+    padding: 1em;
+}
+li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 0.2em
+}
+a:link{
+    text-decoration: none;
+    color: #777;
+
+}
+ul{
+    border-top: 1px solid whitesmoke;
+    border-bottom: 1px solid whitesmoke;
+    padding: 0em 2em;
+}
+.more-articles{
+    text-align: center;
+    border-top: 1px solid whitesmoke;
+    padding: .85em;
+}
+h5{
+    color: #dd3232;
+    font-family: abril fatface;
+}
+.more{
+    display: inline-block;
+    width: 45%;
+    text-align: justify;
+    padding: 0.5em 1em;
+}
+.article{
+    text-align: justify;
+    width: 100%;
+}
